--- a/styles/homepage.styl
+++ b/styles/homepage.styl
@@ -40,18 +40,19 @@ svg.homeChart
     height: 100%
 
     .xAxis
-        fill: #ccc
+        fill: #ddd
 
         text
-            fill: #ccc
-            font-size: 1.5rem
+            fill: #ddd
+            font-size: 1rem
+            font-weight: bold
             font-family: $mainFont
 
         path
             stroke: none   // Disable long horizontal line
             fill: none
         line
-            stroke: #e5e5e5
+            stroke: #eee
             stroke-width: 1px
 
     circle
